# overspecified

./: README.md  controlled_benchmark.csv  evaluation.ipynb  example_output.json  generate_steered_images.py  inference_sdxl_colab.ipynb  main.py  overspecifier.py  prompts.py  pyproject.toml  reqs.sh  results.jsonl
results/: tc1.jsonl
